objects/Plan_Loans__c.object
<CustomObject>
    <fields>
        <fullName>Amount_of_Loan__c</fullName>
        <label>Amount of Loan</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Borrower__c</fullName>
        <label>Borrower</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Date_Repaid__c</fullName>
        <label>Date Repaid</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Edit_Box__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Edit Box</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Origination_Date__c</fullName>
        <label>Origination Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Pension_Loan_Reminder__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Pension Loan Reminder</label>
        <referenceTo>Pension_Loan_Reminder__c</referenceTo>
        <relationshipLabel>Plan Loans</relationshipLabel>
        <relationshipName>Plan_Loans</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Pension_Plan__c</fullName>
        <label>Pension Plan</label>
        <referenceTo>Entities__c</referenceTo>
        <relationshipLabel>Plan Loans</relationshipLabel>
        <relationshipName>Plan_Loans</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Plan Loans</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{000000000}</displayFormat>
        <label>Plan Loans ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Plan Loans</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>